Bug 64947 - EDITING, RTL: When come out of edit mode, the numeral type of digits changes.
Summary: EDITING, RTL: When come out of edit mode, the numeral type of digits changes.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.2.0 target:4.1.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-24 09:46 UTC by navin patidar
Modified: 2013-06-15 15:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description navin patidar 2013-05-24 09:46:42 UTC
Steps to reproduce bug.
1. Start calc application.
2. Enable CTL.
3. Choose Arabic as CTL language.
4. Make numeral type to be selected based on context of writing direction. 
   option> setting> language > complex text layout > numeral=context 
5. Now change cell direction to RTL and enter some digits.
6. Click on any other cell to come out of edit mode of previous cell.

Result :
Numeral type is changed.
Comment 1 Ahmad Harthi 2013-05-27 11:11:12 UTC
Confirmed in LO 3.6.6.2 under f18
Comment 2 Commit Notification 2013-06-15 13:16:12 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=846818afec377b5827fbdf8959ee2f1cf617e44d

fdo#64947 added [NatNum1]General format codes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-06-15 14:44:23 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7d73b42bd71aaab862c3e519348507a84f74754

use proper offset for additional locale data formats, fdo#64947 related



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 abdulmajeed 2013-06-15 15:06:13 UTC
Thank you Eike Rathke
this patch will solve the bug 

so now if you want to change the numeral type for specific cell do the following
1-right click and choose format cell
2-change the language to Arabic 
3-change the numeral type to Arabic 
and there you go :)
Comment 5 Commit Notification 2013-06-15 15:16:35 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94ae882b2eacc183be65f928891ba174a059e3e5&h=libreoffice-4-1

fdo#64947 added [NatNum1]General format codes


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-06-15 15:16:54 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9cf2d50ed5f53f5c40ce576c5bc370c18b9f67b7&h=libreoffice-4-1

use proper offset for additional locale data formats, fdo#64947 related


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.