fdo#64947:set digit language, before OutputDevice draw text.

Set ctl language as digit language when wrt direction is RTL and
numeral language is set to choose based on context.

Change-Id: Ie54193d938e0b6ab6bccb6decb9f245037aebb4b